@@ -101,6 +101,7 @@ public class LocalPlayer extends JPanel implements ZoomableInterface, Player {
     private final Object pre_pulsar_lock = new Object();
     private final Object zoom_lock = new Object();
     private final Object radar_lock = new Object();
+    private final Object rabbit_lock = new Object();
 
     private volatile String nickname;
     private volatile int buyin = GameFrame.BUYIN;
@@ -145,6 +146,7 @@ public class LocalPlayer extends JPanel implements ZoomableInterface, Player {
     private volatile boolean reraise;
     private volatile int conta_win = 0;
     private volatile boolean radar_ckecking = false;
+    private volatile int conta_rabbit = 0;
 
     @Override
     protected void paintComponent(Graphics g) {
@@ -188,7 +190,19 @@ public class LocalPlayer extends JPanel implements ZoomableInterface, Player {
 
     }
 
-    private void setActionBackground(Color color) {
+    public int getConta_rabbit() {
+        synchronized (rabbit_lock) {
+            return conta_rabbit;
+        }
+    }
+
+    public void incrementContaRabbit() {
+        synchronized (rabbit_lock) {
+            conta_rabbit++;
+        }
+    }
+
+    public void setActionBackground(Color color) {
 
         Helpers.GUIRunAndWait(() -> {
             player_action_panel.setBackground(color);
@@ -370,11 +384,12 @@ public class LocalPlayer extends JPanel implements ZoomableInterface, Player {
 
             getChat_notify_label().setOpaque(false);
 
+            getChat_notify_label().setLocation(pos_x, pos_y);
+
             getChat_notify_label().revalidate();
 
             getChat_notify_label().repaint();
 
-            getChat_notify_label().setLocation(pos_x, pos_y);
         });
     }
 
@@ -432,10 +447,11 @@ public class LocalPlayer extends JPanel implements ZoomableInterface, Player {
                             getChat_notify_label().setSize(image.getIconWidth(), image.getIconHeight());
                             getChat_notify_label().setPreferredSize(getChat_notify_label().getSize());
                             getChat_notify_label().setOpaque(false);
-                            getChat_notify_label().revalidate();
-                            getChat_notify_label().repaint();
                             getChat_notify_label().setLocation(pos_x, pos_y);
                             getChat_notify_label().setVisible(true);
+                            getChat_notify_label().revalidate();
+                            getChat_notify_label().repaint();
+
                         });
                     } catch (MalformedURLException ex) {
                         Logger.getLogger(LocalPlayer.class.getName()).log(Level.SEVERE, null, ex);
@@ -605,9 +621,9 @@ public class LocalPlayer extends JPanel implements ZoomableInterface, Player {
                 chip_label.setIcon(chip_label_icon);
                 chip_label.setSize(chip_label.getIcon().getIconWidth(), chip_label.getIcon().getIconHeight());
                 chip_label.setLocation(0, getHoleCard1().getHeight() - chip_label.getHeight());
+                chip_label.setVisible(GameFrame.LOCAL_POSITION_CHIP);
                 chip_label.revalidate();
                 chip_label.repaint();
-                chip_label.setVisible(GameFrame.LOCAL_POSITION_CHIP);
 
             } else {
                 chip_label.setVisible(false);
@@ -919,7 +935,7 @@ public class LocalPlayer extends JPanel implements ZoomableInterface, Player {
             sec_pot_win_label.setOpaque(true);
             sec_pot_win_label.setFocusable(false);
             sec_pot_win_label.setFont(player_action.getFont().deriveFont(player_action.getFont().getStyle(), Math.round(player_action.getFont().getSize() * 0.7f)));
-            panel_cartas.add(sec_pot_win_label, new Integer(1003));
+            panel_cartas.add(sec_pot_win_label, Integer.valueOf(1002));
             chat_notify_label.setVisible(false);
             chat_notify_label.setDoubleBuffered(true);
             chat_notify_label.setFocusable(false);
@@ -936,7 +952,7 @@ public class LocalPlayer extends JPanel implements ZoomableInterface, Player {
                     });
                 }
             });
-            panel_cartas.add(chat_notify_label, new Integer(1002));
+            panel_cartas.add(chat_notify_label, Integer.valueOf(1001));
             chip_label.setVisible(false);
             chip_label.setDoubleBuffered(true);
             chip_label.setCursor(new Cursor(Cursor.HAND_CURSOR));
@@ -949,7 +965,7 @@ public class LocalPlayer extends JPanel implements ZoomableInterface, Player {
                     player_nameMouseClicked(e);
                 }
             });
-            panel_cartas.add(chip_label, new Integer(1001));
+            panel_cartas.add(chip_label, Integer.valueOf(1000));
             border_color = ((LineBorder) getBorder()).getLineColor();
             action_button_armed.put(player_check_button, false);
             action_button_armed.put(player_bet_button, false);
@@ -1271,6 +1287,8 @@ public class LocalPlayer extends JPanel implements ZoomableInterface, Player {
                         public void actionPerformed(ActionEvent ae) {
 
                             if (!GameFrame.getInstance().getCrupier().isFin_de_la_transmision() && !GameFrame.getInstance().getCrupier().isSomePlayerTimeout() && !GameFrame.getInstance().isTimba_pausada() && !isRADAR_ckecking() && response_counter > 0 && auto_action.isRunning() && t == GameFrame.getInstance().getCrupier().getTurno()) {
+                                GameFrame.getInstance().refresh();
+
                                 response_counter--;
 
                                 GameFrame.getInstance().getBarra_tiempo().setValue(response_counter);
@@ -1362,6 +1380,8 @@ public class LocalPlayer extends JPanel implements ZoomableInterface, Player {
                 }
 
                 Helpers.forceRepaintComponentNow(this);
+
+                GameFrame.getInstance().refresh();
 
             });
 
@@ -2959,7 +2979,14 @@ public class LocalPlayer extends JPanel implements ZoomableInterface, Player {
     public void showCards(String jugada) {
         this.muestra = true;
         Helpers.GUIRun(() -> {
-            setActionBackground(new Color(51, 153, 255));
+
+            if (GameFrame.getInstance().getCrupier().getRabbit_players().contains(nickname)) {
+                setActionBackground(Color.BLUE);
+                setPlayerActionIcon("action/rabbit_action.png");
+            } else {
+                setActionBackground(new Color(51, 153, 255));
+            }
+
             player_action.setForeground(Color.WHITE);
             player_action.setText("MUESTRA (" + jugada + ")");
         });
